# musix-rewrite

./: .gitignore  befofeinstall  pyproject.toml  test.py
musix/: __init__.py
musix/Bot/: bot.py
musix/configs/: config.toml
musix/util/: files.py
