[tool.poetry]
name = "musix"
version = "0.0.1"
description = ""
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python ="^3.7"
discord = {extras = ["voice"], version = "^1.0.1"}
youtube_dl = "^2021.6.6"
typer = {extras = ["all"], version = "^0.3.2"}
colorama = "^0.4.4"
asyncio = "^3.4.3"
requests = "^2.25.1"
fastapi = "^0.65.2"
PyNaCl = "^1.4.0"
toml = "^0.10.2"
prettyTables = "^0.4"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
